FancyBox CSS added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 
 </head>
 <body>
+	
+	<!-- This loads the YouTube IFrame Player API code -->
+	<script src="http://www.youtube.com/player_api"></script>
+
+	<!-- THESE ARE ALERTS FROM THE DEVISE GEM-->
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
