--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,8 @@
+<script>
+	//This initializes the fancybox css so that videos can pop out of the screen
+	initFancyBoxSimple();
+</script>
+
 <div class="wrapper">
   <!-- ####################################################################################################### -->
   <div id="header">
@@ -38,13 +43,14 @@
   <!-- ####################################################################################################### -->
   <div id="intro">
 	
-	<div class="fl_left"> <a href="#"><img height=330 width=360 src="/assets/Patients.jpg" alt="" /></a> </div>
+	<div class="fl_left"> <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/M3lFgtcOml0?autoplay=1"><img height=330 width=360 src="/assets/Patients.jpg" alt="" /></a> </div>
     
 	<div class="fl_right">
 	  
       <h2>Not Just Another Hospital - It's <i>Your</i> Hospital.</h2>
       <p>Welcome to the new myNYP.org portal!</p>
       <p>myNYP.org is a free and secure service that lets you. . .</p>
+	<a href="/assets/Patients.jpg" class="fancybox" title="Sample title"><img height=30 width=30 src="/assets/Patients.jpg" /> THIS IS FANCYBOX EXAMPLE</a>
  		<p></p>
     </div>
 
