Base Rails server, has VideoChat, Videos working

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -27,7 +27,7 @@
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="sessionview/index.html">VideoChat Demo</a></li>
-        <li><a href="sessionview/index">Talk To a Doctor Now</a></li>
+        <li><a href="videos">Videos</a></li>
         <li><a href="#">DropDown</a>
           <ul>
             <li><a href="#">Link 1</a></li>
