changed type to category

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= video.name %></td>
         <td><%= video.url %></td>
-        <td><%= video.type %></td>
+        <td><%= video.category %></td>
         <td><%= video.thumburl %></td>
         <td><%= link_to 'Show', video %></td>
         <td><%= link_to 'Edit', edit_video_path(video) %></td>
