--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :url %>
   </div>
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :category%><br>
+    <%= f.text_field :category %>
   </div>
   <div class="field">
     <%= f.label :thumburl %><br>
