--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,10 @@
 <script>
 	//This initializes the fancybox css so that videos can pop out of the screen
 	initFancyBoxSimple();
+	initSlideshow();
 </script>
+
+
 
 <div class="wrapper">
   <!-- ####################################################################################################### -->
@@ -43,8 +46,19 @@
   <!-- ####################################################################################################### -->
   <div id="intro">
 	
-	<div class="fl_left"> <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/M3lFgtcOml0?autoplay=1"><img height=330 width=360 src="/assets/Patients.jpg" alt="" /></a> </div>
-    
+	
+	<!-- This container holds the slideshow for images -->
+	<div class="container">
+  
+	   <div class="fl_left" id="slides">
+			<div class="fl_left"> <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/M3lFgtcOml0?autoplay=1"><img height=330 width=360 src="/assets/Patients.jpg" alt="" /></a> </div>
+			<div class="fl_left"> <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/yl80OgCFb3s?autoplay=1"><img height=330 width=360 src="/assets/patients2.png" alt="" /></a> </div>
+    		<div class="fl_left"> <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/TFgNyey0RzA?autoplay=1"><img height=330 width=360 src="/assets/patients3.png" alt="" /></a> </div>
+		</div>
+	</div>
+
+
+
 	<div class="fl_right">
 	  
       <h2>Not Just Another Hospital - It's <i>Your</i> Hospital.</h2>
