adding images and fonts to public and updating the index html erc in the main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar">
 	<!-- This loads the YouTube IFrame Player API code -->
 	<!-- THESE ARE ALERTS FROM THE DEVISE GEM-->
 	<!--<p class="notice"><%= notice %></p>
