--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,11 +1,8 @@
-    <!-- This loads the YouTube IFrame Player API code -->
-    <!-- THESE ARE ALERTS FROM THE DEVISE GEM-->
-    <!--<p class="notice"></p>
-    <p class="alert"></p>-->
-<!--[if lt IE 7]>
+ <!--[if lt IE 7]>
         <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 
+<div class="wrapper">
     <div class="fixed-header hide-for-small">
         <div class="row">
             <div class="eight columns navigation small-twelve">
@@ -28,7 +25,7 @@
                         <a href="#" title="Switch to High Contrast View">High Contrast <span>off</span></a>
                     </li>
                     <li id="js-language">
-                        <a href="#" title="Change Language" class="icon"><img src="images/icn-lang-en.png" alt="English" /></a>
+                        <a href="#" title="Change Language" class="icon"><img src="/images/icn-lang-en.png" alt="English" /></a>
                     </li>
                 </ul>
             </div>
@@ -230,7 +227,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- CARE PLAN -->
@@ -241,7 +237,7 @@
                     <h2 id="tour-careplan">Care Plan</h2>
                 </div>
             </div>
-                <div class="calendar ten column">
+            <div class="calendar ten column">
                     <div class="panel content">
 
                         <div class="care-event">
@@ -280,7 +276,6 @@
                         <div class="clearfix"></div>
 
                     </div>
-                </div>
             </div>
         </div>
     </section>
@@ -293,9 +288,7 @@
                     <h2 id="tour-labs">Labs</h2>
                 </div>
             </div>
-
             <div class="content-container ten columns">
-                
                 <!-- Lab Result -->
                 <div class="panel content lab-result closed">
                     <h3>Fasting Blood Glucose <small>two days ago</small></h3>
@@ -470,9 +463,7 @@
                         </div>
                     </div>
                 </div><!-- /lab result -->
-
             </div>
-
         </div>
     </section>
 
@@ -534,7 +525,6 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
         </div>
     </section>
@@ -637,7 +627,6 @@
                             </div>
                         </div>
                     </div><!-- /.medication-single -->
-
 
                     <div class="six column medication-single">
                         <div class="panel">
@@ -797,7 +786,6 @@
                         </div>
                     </div><!-- /.medication-single -->
 
-
                 </div>
             </div>
         </div>
@@ -811,7 +799,6 @@
                     <h2>Encounters</h2>
                 </div>
             </div>
-
             <div class="table ten column content">
                 <div class="panel">
 
@@ -871,82 +858,15 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
         </div>
     </section>
-
-    <div class="row disclaimer">
-        <div class="twelve columns">
-            <p>protoRx prototype by <a href="https://tonywebster.com" title="Tony Webster | designer / developer" target="_blank">Tony Webster</a></p>
-            <p>Demonstration: does not represent an actual person or a real medical record</p>
-        </div>
-    </div>
-
-    <!-- TOUR -->
-    <ol id="joyRideContent" style="display:none">
-        <li data-id="tour-patient-name" data-button="Next">
-            <p>The patient's name is large and easy to read.</p>
-        </li>
-        <li data-id="tour-patient-bio" data-button="Next">
-            <p>Patient demographics, contact information, and room for proprietary provider information.</p>
-        </li>
-        <li data-id="tour-health-boxes" data-button="Next">
-            <p>The most relevant information for the viewer is shown.  Doctors see high-level health information, patients see their next steps to maintain health, or EMTs see blood type, condition codes or a DNR order.</p>
-        </li>
-        <li data-id="tour-access-links" data-button="Next">
-            <p>Accessibility options would enable users to switch to a high contrast version for low-vision users, zoom the text to make it larger, or change languages.</p>
-        </li>
-        <li data-id="tour-allergies" data-button="Next">
-            <p>The patient's allergies are shown near the top of the page to alert medical staff and remind the patient to review those allergens for accuracy every time they see their record. Clicking on an allergy will navigate the user to the associated provider encounter.</p>
-        </li>
-        <li data-id="tour-conditions" data-button="Next">
-            <p>The patient's conditions are shown on a timeline. Red charts are active issues, while green ones are resolved.  Clicking on a condition expands to show written details and links to associated encounters, labs and meds.</p>
-        </li>
-        <li data-id="tour-careteam" data-button="Next">
-            <p>The patient's care team and their contact information is where everybody can see it.</p>
-        </li>
-        <li data-id="tour-careplan" data-button="Next">
-            <p>A care plan shows upcoming appointments and home care instructions, and has options to add it to an external calendar or send it to a care team.  The clinic could link to driving and transit directions.</p>
-        </li>
-        <li data-id="tour-labs" data-button="Next">
-            <p>Labs show only the high-level statuses until they're clicked on.  Patients can then see which risk category they fall into, physician instructions, and information about the test.</p>
-        </li>
-        <li data-id="tour-immunizations" data-button="Next">
-            <p>Previous vacciations are listed along with alerts about upcoming or past-due immunizations.</p>
-        </li>
-        <li data-id="tour-meds" data-button="Next">
-            <p>Prescriptions include more than just pills -- they're color-coded and with iconography to help patients know how much they need to take.  Refills highlight red when they're getting low.</p>
-        </li>
-        <li data-id="tour-encounters" data-button="Next">
-            <p>A table of encounters has all of the detailed information, with links back to prescriptions and labs, and a patient's next steps highlighted in yellow.</p>
-        </li>
-        <li data-id="tour-responsive" data-button="End Tour"><!-- fix -->
-            <p>protoRx is built using HTML5, CSS3 and JavaScript, so it looks great on modern browsers, but it gracefully degrades for older ones.  It's responsive and can be viewed on desktop, tablet and mobile.  Add in the accessibility features, the ability to add a print stylesheet, and the collaboration of open-source code, and everybody can use protoRx.</p>
-        </li>
-    </ol>
+    
+</div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
-    <script src="js/foundation.min.js?2"></script>
-    <script src="js/jquery.syncheight.js?2"></script>
-    <script src="js/bootstrap-components.min.js?2"></script>
-    <script src="js/app.min.js?3"></script>
-
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-36673574-1']);
-      _gaq.push(['_setDomainName', 'protorx.com']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
-
-
-    <script src="http://www.youtube.com/player_api"></script>
+    <script>window.jQuery || document.write('<script src="/assets/jquery-1.8.2.min.js"><\/script>')</script>
+    <script src="/assets/javascripts/foundation.min.js?2"></script>
+    <script src="/assets/javascripts/jquery.syncheight.js?2"></script>
+    <script src="/assets/javascripts/bootstrap-components.min.js?2"></script>
+    <script src="/assets/javascripts/app.min.js?3"></script>
