moved order of nav elements and added Robot Dr. Oz avatar

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,20 +9,26 @@
     <div class="fixed-header hide-for-small">
         <div class="row">
             <div class="eight columns navigation small-twelve">
+                <img src="images/NYPlogo-square.jpg" alt="NY Presbyterian Hospital" align=left />
                 <ul>
-                    <li><a href="#allergies">Allergies</a></li>
+                    <li><a href="#careteam">Care Plan</a></li>
                     <li><a href="#conditions">Conditions</a></li>
+                    <li><a href="#medications">Meds</a></li>
                     <li><a href="#labs">Labs</a></li>
                     <li><a href="#immunizations">Vaccs</a></li>
-                    <li><a href="#medications">Meds</a></li>
+                    <li><a href="#allergies">Allergies</a></li>
                     <li><a href="#encounters">Encounters</a></li>
-                    <li><a href="#careteam">Care Plan</a></li>
+                    <li><a href="#">Video Doctor</a></li>
+                    <li><a href="#">Live Video Help</a></li>
                 </ul>
+                
+                <script language="JavaScript" type="text/javascript" src="http://vhss-d.oddcast.com/vhost_embed_functions_v2.php?acc=4341192&js=1"></script><script language="JavaScript" type="text/javascript">AC_VHost_Embed(4341192,100,133,'',1,1, 2358095, 0,1,0,'7bc377ad289b0aae0017cc81ce687638',9);</script>
+                
             </div>
             <div class="four columns accessibility hide-for-small" id="tour-access-links">
                 <ul>
-                    <li class="tour">
-                        <a href="#" title="Take a Tour of protoRx" id="js-tour-page">Tour</a>
+                    <li class="login">
+                        <a href="#" title="Login" id="js-login-page">Login</a>
                     </li>
                     <li id="js-high-contrast">
                         <a href="#" title="Switch to High Contrast View">High Contrast <span>off</span></a>
