updates to style and creation of video sidebar

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -7,50 +7,50 @@ Open source fonts licensed under the SIL Open Font License.
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('../fonts/sourcesanspro-extralight-webfont.eot');
-    src: url('../fonts/sourcesanspro-extralight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/sourcesanspro-extralight-webfont.woff') format('woff'),
-         url('../fonts/sourcesanspro-extralight-webfont.ttf') format('truetype');
+    src: url('/fonts/sourcesanspro-extralight-webfont.eot');
+    src: url('/fonts/sourcesanspro-extralight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/sourcesanspro-extralight-webfont.woff') format('woff'),
+         url('/fonts/sourcesanspro-extralight-webfont.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('../fonts/sourcesanspro-light-webfont.eot');
-    src: url('../fonts/sourcesanspro-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/sourcesanspro-light-webfont.woff') format('woff'),
-         url('../fonts/sourcesanspro-light-webfont.ttf') format('truetype');
+    src: url('/fonts/sourcesanspro-light-webfont.eot');
+    src: url('/fonts/sourcesanspro-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/sourcesanspro-light-webfont.woff') format('woff'),
+         url('/fonts/sourcesanspro-light-webfont.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('../fonts/sourcesanspro-regular-webfont.eot');
-    src: url('../fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'),
-         url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype');
+    src: url('/fonts/sourcesanspro-regular-webfont.eot');
+    src: url('/fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/sourcesanspro-regular-webfont.woff') format('woff'),
+         url('/fonts/sourcesanspro-regular-webfont.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('../fonts/sourcesanspro-semibold-webfont.eot');
-    src: url('../fonts/sourcesanspro-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/sourcesanspro-semibold-webfont.woff') format('woff'),
-         url('../fonts/sourcesanspro-semibold-webfont.ttf') format('truetype');
+    src: url('/fonts/sourcesanspro-semibold-webfont.eot');
+    src: url('/fonts/sourcesanspro-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/sourcesanspro-semibold-webfont.woff') format('woff'),
+         url('/fonts/sourcesanspro-semibold-webfont.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('../fonts/sourcesanspro-bold-webfont.eot');
-    src: url('../fonts/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/sourcesanspro-bold-webfont.woff') format('woff'),
-         url('../fonts/sourcesanspro-bold-webfont.ttf') format('truetype');
+    src: url('/fonts/sourcesanspro-bold-webfont.eot');
+    src: url('/fonts/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/sourcesanspro-bold-webfont.woff') format('woff'),
+         url('/fonts/sourcesanspro-bold-webfont.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
