--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,7 @@
     <![endif]-->
 
 <div class="wrapper">
-    <div class="fixed-header hide-for-small">
+    <div class="fixed-header hide-for-small" id="nypcolor">
         <div class="row">
             <div class="eight columns navigation small-twelve">
                 <ul>
@@ -22,10 +22,7 @@
                         <a href="#" title="Take a Tour of protoRx" id="js-tour-page">Tour</a>
                     </li>
                     <li id="js-high-contrast">
-                        <a href="#" title="Switch to High Contrast View">High Contrast <span>off</span></a>
-                    </li>
-                    <li id="js-language">
-                        <a href="#" title="Change Language" class="icon"><img src="/images/icn-lang-en.png" alt="English" /></a>
+                        <a href="#" title="Switch to High Contrast View"><img src="/images/icn-lang-en.png" alt="English" /> Sign Out</a>
                     </li>
                 </ul>
             </div>
@@ -77,6 +74,85 @@
             </div>
         </div>
     </section>
+
+    <!-- CARE TEAM -->
+    <section class="careteam" id="careteam">
+        <div class="row">
+            <div class="headline two columns">
+                <div class="panel">
+                    <h2 id="tour-careteam">Care Team</h2>
+                </div>
+            </div>
+                <div class="contacts ten column">
+                    <div class="panel content">
+                        <div class="contact">
+                            <h4>Jake Dowell <small>Primary Physician</small></h4>
+                            <p>Methodist Hospital &bull; 651-222-1055 &bull; jdowell@methodist.example.org</p>
+                        </div>
+                        <div class="contact">
+                            <h4>Margret Wander <small>Physical Therapist</small></h4>
+                            <p>Methodist Hospital &bull; 651-222-1055 &bull; mwander@methodist.example.org</p>
+                        </div>
+                        <div class="contact">
+                            <h4>Niklas Backstrom <small>Father</small></h4>
+                            <p>Methodist Hospital &bull; 507-732-5299 &bull; nk1439backstrom@yahoo.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <!-- CARE PLAN -->
+    <section class="careplan" id="careteam">
+        <div class="row">
+            <div class="headline two columns">
+                <div class="panel">
+                    <h2 id="tour-careplan">Care Plan</h2>
+                </div>
+            </div>
+            <div class="calendar ten column">
+                    <div class="panel content">
+
+                        <div class="care-event">
+                            <div class="cal-date">
+                                <small>Thursday</small> Dec 13 <small>4:30 PM</small>
+                            </div>
+                            <div class="cal-detail">
+                                <h4>Office consultation</h4>
+                                <p>Asthma consultation &bull; <a href="#">Portland Clinic</a> &bull; Dr. George Potomac</p>
+                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
+                            </div>
+                        </div>
+
+                        <div class="care-event">
+                            <div class="cal-date">
+                                <small>Tuesday</small> Jan 22 <small>9:15 AM</small>
+                            </div>
+                            <div class="cal-detail">
+                                <h4>Neck surgery</h4>
+                                <p>Cease drinking and eating 12 hours before &bull; <a href="#">Riverside Hospital</a></p>
+                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
+                            </div>
+                        </div>
+
+                        <div class="care-event">
+                            <div class="cal-date">
+                                <small>Home Care</small> Jan 22-30 <small>Instructions</small>
+                            </div>
+                            <div class="cal-detail">
+                                <h4>Limit physical activity and do neck exercises</h4>
+                                <p>Post-surgery instructions</p>
+                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
+                            </div>
+                        </div>
+
+                        <div class="clearfix"></div>
+
+                    </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- 03 ALLERGIES -->
     <section class="allergies" id="allergies">
@@ -201,85 +277,7 @@
         </div>
     </section>
 
-
-    <!-- CARE TEAM -->
-    <section class="careteam" id="careteam">
-        <div class="row">
-            <div class="headline two columns">
-                <div class="panel">
-                    <h2 id="tour-careteam">Care Team</h2>
-                </div>
-            </div>
-                <div class="contacts ten column">
-                    <div class="panel content">
-                        <div class="contact">
-                            <h4>Jake Dowell <small>Primary Physician</small></h4>
-                            <p>Methodist Hospital &bull; 651-222-1055 &bull; jdowell@methodist.example.org</p>
-                        </div>
-                        <div class="contact">
-                            <h4>Margret Wander <small>Physical Therapist</small></h4>
-                            <p>Methodist Hospital &bull; 651-222-1055 &bull; mwander@methodist.example.org</p>
-                        </div>
-                        <div class="contact">
-                            <h4>Niklas Backstrom <small>Father</small></h4>
-                            <p>Methodist Hospital &bull; 507-732-5299 &bull; nk1439backstrom@yahoo.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <!-- CARE PLAN -->
-    <section class="careplan" id="careteam">
-        <div class="row">
-            <div class="headline two columns">
-                <div class="panel">
-                    <h2 id="tour-careplan">Care Plan</h2>
-                </div>
-            </div>
-            <div class="calendar ten column">
-                    <div class="panel content">
-
-                        <div class="care-event">
-                            <div class="cal-date">
-                                <small>Thursday</small> Dec 13 <small>4:30 PM</small>
-                            </div>
-                            <div class="cal-detail">
-                                <h4>Office consultation</h4>
-                                <p>Asthma consultation &bull; <a href="#">Portland Clinic</a> &bull; Dr. George Potomac</p>
-                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
-                            </div>
-                        </div>
-
-                        <div class="care-event">
-                            <div class="cal-date">
-                                <small>Tuesday</small> Jan 22 <small>9:15 AM</small>
-                            </div>
-                            <div class="cal-detail">
-                                <h4>Neck surgery</h4>
-                                <p>Cease drinking and eating 12 hours before &bull; <a href="#">Riverside Hospital</a></p>
-                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
-                            </div>
-                        </div>
-
-                        <div class="care-event">
-                            <div class="cal-date">
-                                <small>Home Care</small> Jan 22-30 <small>Instructions</small>
-                            </div>
-                            <div class="cal-detail">
-                                <h4>Limit physical activity and do neck exercises</h4>
-                                <p>Post-surgery instructions</p>
-                                <p><a href="#" class="button">Add to Calendar</a> &bull; <a href="#" class="button">Send to Care Team</a></p>
-                            </div>
-                        </div>
-
-                        <div class="clearfix"></div>
-
-                    </div>
-            </div>
-        </div>
-    </section>
-
+    
     <!-- 05 LABS -->
     <section class="labs" id="labs">
         <div class="row">
@@ -861,7 +859,10 @@
             </div>
         </div>
     </section>
-    
+</div>
+
+<div id="videosidebar">
+    <h1>Connect and Learn</h1>
 </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -870,3 +871,4 @@
     <script src="/assets/javascripts/jquery.syncheight.js?2"></script>
     <script src="/assets/javascripts/bootstrap-components.min.js?2"></script>
     <script src="/assets/javascripts/app.min.js?3"></script>
+    <script src="/assets/javascripts/"
