--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,33 @@
 #indexcolor {
 	color: #ffffff;
 }
+
+#customfont {
+     font-family: 'Alegreya Sans', sans-serif;
+}
+
+.biggerwrapper {
+	
+}
+
 .wrapper {
-	width: 60%;
+	width: 70%;
+}
+
+#videosidebar {
+	position: fixed;
+    right: 0px;
+    top: 0;
+    width: 330px;	
+    background-color: #ffffff;
+    height: 100%;
+}
+
+#videosidebar h1 {
+	padding-top: 70px;
+	padding-left: 20px;
+	font-family: 'SourceSansPro', Helvetica, Arial, Tahoma, sans-serif;
+	font-size: 30px;
 }
 
 #montserrat {
@@ -42,5 +67,10 @@ nav.stick {
 }
 
 #video {
-	
+	position: absolute;
+    right: 20px;
+    top: 0;
+    width: 220px;	
+    border-radius( 5px );
+
 }
