added discharge model and calls patient files

--- a/app/views/labs/show.html.erb
+++ b/app/views/labs/show.html.erb
@@ -20,5 +20,9 @@
   <%= @lab.datedrawn %>
 </p>
 
+
+<!-- <iframe width="420" height="315" src="//www.youtube.com/embed/<%= @video.youtube_id %>" frameborder="0" allowfullscreen></iframe> -->
+
+
 <%= link_to 'Edit', edit_lab_path(@lab) %> |
 <%= link_to 'Back', labs_path %>
