--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,13 +2,7 @@
 	//This initializes the fancybox css so that videos can pop out of the screen
 	initFancyBoxSimple();
 	initSlideshow();
-	getText();
-</script>
-
-<script type="text/javascript">
-    $(document).ready(function() {
-        $("#hidden_link").fancybox().trigger('click');
-    });
+	//getText();
 </script>
 
 
