Added links to VideoChat

--- a/app/views/sessionview/index.html.erb
+++ b/app/views/sessionview/index.html.erb
@@ -39,6 +39,6 @@
 	
 </script>
 
-<h1>OpenTok Video</h1>
+<h1>MyNYP Live</h1>
 <div id="myPublisherDiv"></div>
-<p>This is a test of the OpenTok Video</p>
+<p>Welcome to the MyNYP Telemedicine, please wait for further users</p>
