--- a/app/views/patients/_youtubevideo.html.haml
+++ b/app/views/patients/_youtubevideo.html.haml
@@ -1,3 +1,5 @@
 .youtubeplayer
   %iframe{:allowfullscreen => "", :frameborder => "0", :height => "315", :src => "//www.youtube.com/embed/#{youtubeid}", :width => "420"}
   %br
+  .clearboth
+    %i.fa.fa-thumbs-up.fa-3x
