--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag "application", 'https://fonts.googleapis.com/css?family=Alegreya+Sans:300', :media => "all" %>
     <%= stylesheet_link_tag "application", 'https://fonts.googleapis.com/css?family=Duru+Sans', :media => "all" %>
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <style>
