--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -20,7 +20,9 @@
             <div class="four columns accessibility hide-for-small" id="tour-access-links">
                 <ul>
                     <li class="tour">
-                        <a href="#" title="Take a Tour of protoRx" id="js-tour-page">Tour</a>
+                        
+                        <%= link_to "Live Help", sessionview_index_path %>
+                        
                     </li>
                     <li id="js-high-contrast">
                         <a href="#" title="Switch to High Contrast View"><img src="/images/icn-lang-en.png" alt="English" /> Sign Out</a>
